<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/theme_color"
        tools:context=".activities.HomeActivity">

        <RelativeLayout
            android:id="@+id/topRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mainRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topRL">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottom_navigation_view"
                android:paddingHorizontal="@dimen/_7sdp" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/ad_view"
                android:background="@drawable/grey_bottom_bg"
                android:paddingVertical="@dimen/_5sdp"
                app:itemIconSize="@dimen/_35sdp"
                app:itemRippleColor="@null"
                app:labelVisibilityMode="unlabeled"
                app:menu="@menu/bottom_menu" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_home" />

        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_5sdp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="internet.json"
            app:lottie_loop="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView1"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="@dimen/_5sdp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loader.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/noInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animationView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/no_internet"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone" />


    </RelativeLayout>

</layout>