<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".fragments.SettingFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/mNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/t1"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_notification" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@id/t1"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/noti"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCompress"
                    style="@style/BrandedSwitch.control"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:checked="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/mShare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/t2"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_share" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@id/t2"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/mRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/t3"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_rate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@id/t3"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/mContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/t4"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_message" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@id/t4"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardBackgroundColor="@color/grey_color"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:id="@+id/mPolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/t5"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_toRightOf="@id/t5"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/policy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>